DVRP: use custom comparator in PartialSort for deterministic tie-breaking