@@ -19,11 +19,12 @@
 
 package org.matsim.contrib.util;
 
-import java.util.Arrays;
+import java.util.Comparator;
 import java.util.List;
 import java.util.PriorityQueue;
-import java.util.function.ToDoubleFunction;
 import java.util.stream.Stream;
+
+import com.google.common.base.Preconditions;
 
 /**
  * Sorts from smallest to largest. If the opposite should be the case then add elements with their values negated:
@@ -35,50 +36,36 @@ import java.util.stream.Stream;
  * @param <T>
  */
 public class PartialSort<T> {
-	public static <T> List<T> kSmallestElements(int k, Stream<T> elements, ToDoubleFunction<T> evaluator) {
-		PartialSort<T> nearestRequestSort = new PartialSort<>(k);
-		nearestRequestSort.addAll(elements, evaluator);
+	public static <T> List<T> kSmallestElements(int k, Stream<T> elements, Comparator<T> comparator) {
+		PartialSort<T> nearestRequestSort = new PartialSort<>(k, comparator);
+		elements.forEach(nearestRequestSort::add);
 		return nearestRequestSort.kSmallestElements();
 	}
 
-	private static class ElementValuePair<T> implements Comparable<ElementValuePair<T>> {
-		private final T element;
-		private final double value;
-
-		public ElementValuePair(T element, double value) {
-			this.element = element;
-			this.value = value;
-		}
-
-		@Override
-		public int compareTo(ElementValuePair<T> o) {
-			return -Double.compare(value, o.value);// reversed comparison (the smallest is the last in the queue)
-		}
-	}
-
 	private final int k;
-	private final PriorityQueue<ElementValuePair<T>> kSmallestElements;// descending order: from k-th to 1-st
+	private final Comparator<T> comparator;
+	private final PriorityQueue<T> kSmallestElements;// descending order: from k-th to 1-st
 
-	public PartialSort(int k) {
+	public PartialSort(int k, Comparator<T> comparator) {
+		Preconditions.checkArgument(k > 0, "k must be positive.");
 		this.k = k;
-		kSmallestElements = new PriorityQueue<>(k);
+		this.comparator = comparator;
+		kSmallestElements = new PriorityQueue<>(k, comparator.reversed());
 	}
 
-	public void add(T element, double value) {
+	public void add(T element) {
 		if (kSmallestElements.size() < k) {
-			kSmallestElements.add(new ElementValuePair<>(element, value));
-		} else if (Double.compare(value, kSmallestElements.peek().value) < 0) {
+			kSmallestElements.add(element);
+		} else if (comparator.compare(element, kSmallestElements.peek()) < 0) {
 			kSmallestElements.poll();
-			kSmallestElements.add(new ElementValuePair<>(element, value));
+			kSmallestElements.add(element);
 		}
-	}
-
-	public void addAll(Stream<T> elements, ToDoubleFunction<T> evaluator) {
-		elements.forEach(e -> this.add(e, evaluator.applyAsDouble(e)));
 	}
 
 	/**
-	 * Gets k smallest elements (side effect: they are removed from the queue -- the queue gets empty).
+	 * Gets k smallest elements.
+	 *
+	 * SIDE EFFECT: elements are removed from the queue.
 	 *
 	 * @return list containing k smallest elements sorted ascending: from the smallest to the k-th smallest
 	 */
@@ -86,8 +73,8 @@ public class PartialSort<T> {
 		@SuppressWarnings("unchecked")
 		T[] array = (T[])new Object[kSmallestElements.size()];
 		for (int i = array.length - 1; i >= 0; i--) {
-			array[i] = kSmallestElements.poll().element;
+			array[i] = kSmallestElements.poll();
 		}
-		return Arrays.asList(array);
+		return List.of(array);
 	}
 }
